# codeperf-bot

./: .gitignore  Procfile  pyproject.toml  requirements.txt
codeperf_bot/: __main__.py  cli.py  config.py
tests/: test_cli.py  test_codeperf_bot.py
