[tool.poetry]
name = "codeperf-bot"
version = "0.1.0"
description = ""
authors = ["codeperf <hello@codeperf.io>"]
readme = "README.md"

[tool.poetry.scripts]
codeperf-gh-bot = "codeperf_bot.cli:cli"

[tool.poetry.dependencies]
python = "^3.6.2"
gidgethub = "^5.0.1"
aiohttp = "^3.8.1"
cachetools = "^4.2.4"
starlette = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pytest = "^5.2"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.1"}
tox-docker = {extras = ["poetry"], version = "^3.0.0"}
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
